# jddf-rust

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: errors.rs  lib.rs  schema.rs  validator.rs  vm.rs
tests/: spec_test.rs
