[package]
name = "jddf"
version = "0.1.0"
description = "JSON Data Definition Format validator and utilities."
license = "MIT"
documentation = "https://docs.rs/jddf"
homepage = "https://github.com/jddf/jddf-rust"
repository = "https://github.com/jddf/jddf-rust"
authors = ["Ulysse Carion <ulysse@segment.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json-pointer = "0.3"
failure = "0.1"
chrono = "0.4"

[dev-dependencies]
pretty_assertions = "0.6"
